Introduced breaking change - removed detector type from a detector. Added collection of detector types in input field
Refactored tests and updated constructor from a Detector not to consider detector type property

Signed-off-by: Stevan Buzejic <buzejic.stevan@gmail.com>